--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.4",
     "@uiball/loaders": "^1.2.6",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-clipboard-copy": "^0.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
